--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ sudo: required
 
 services:
   - docker
+  
+before_install:
+  - docker pull openmicroscopy/octave
+  - docker ps -a
+
+script:
+  - docker run -v $(pwd):/SCINGE openmicroscopy/octave /SCINGE/SCINGE_Example.m
