--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker pull openmicroscopy/octave
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE openmicroscopy/octave SCINGE_Example.m
+  - docker run -v $(pwd):/SCINGE -w /SCINGE openmicroscopy/octave /bin/bash -c "octave SCINGE_Example.m"
