--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
   
 before_install:
-  - docker pull openmicroscopy/octave
+  - docker pull mtmiller/octave-snapshot
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint bash openmicroscopy/octave -c "octave -v; octave SCINGE_Example.m"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" mtmiller/octave-snapshot -c "octave -v; octave SCINGE_Example.m"
