Placeholder script to install Glmnet for Octave inside Docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker pull mtmiller/octave-snapshot
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" mtmiller/octave-snapshot -c "octave -v; octave SCINGE_Example.m"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" mtmiller/octave-snapshot -c "./install_glmnet_docker.sh; octave -v; octave SCINGE_Example.m"
