--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ sudo: required
 
 services:
   - docker
+
+before_install:
+  - docker pull fbenz/docker-java-matlab
+
+script:
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" fbenz/docker-java-matlab -c "ls; ls /opt/mcr; ./install_run_SCINGE.sh"
