--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker pull fbenz/docker-java-matlab
+  - docker pull amarburg/matlab-runtime
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" fbenz/docker-java-matlab -c "ls -l; ls -l /opt/mcr/v90; ./install_run_SCINGE.sh"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" amarburg/matlab-runtime -c "ls -l; ls -l /usr/local/MATLAB/MATLAB_Runtime/v94; ./install_run_SCINGE.sh"
