--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker pull amarburg/matlab-runtime
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" amarburg/matlab-runtime -c "./install_run_SCINGE.sh; ls Output/ -l"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" amarburg/matlab-runtime -c "./install_run_SCINGE.sh; ls Output/ -l; tests/compare_example_output.sh"
