--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker pull amarburg/matlab-runtime
+  - docker pull agitter/singe
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" amarburg/matlab-runtime -c "source install_run_SCINGE.sh; ls Output/ -l; source ~/.bashrc; conda activate scinge-test; conda list; tests/compare_example_output.sh"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe -c "./run_SCINGE_Example.sh /usr/local/MATLAB/MATLAB_Runtime/v94; ls Output/ -l; source ~/.bashrc; conda activate scinge-test; conda list; tests/compare_example_output.sh"
