--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker pull agitter/singe:0.2.0
+  - docker pull agitter/singe:latest
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe:0.2.0 -c "mv /download/SCINGE_Example .; ./run_SCINGE_Example.sh /usr/local/MATLAB/MATLAB_Runtime/v94; ls Output/ -l; source ~/.bashrc; conda activate scinge-test; conda list; tests/compare_example_output.sh"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe:latest -c "mv /download/SCINGE_Example .; ./run_SCINGE_Example.sh /usr/local/MATLAB/MATLAB_Runtime/v94; ls Output/ -l; source ~/.bashrc; conda activate scinge-test; conda list; tests/compare_example_output.sh"
