Update compiled code in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,5 +24,9 @@ WORKDIR /download
 
 # Install the compiled SCINGE_Example executable from the stable release
 # md5sum of v0.2.0 SCINGE_Example is f6530f824b093a0fcd3204347c4e1659
-RUN wget --quiet https://github.com/gitter-lab/SINGE/releases/download/v0.2.0/SCINGE_Example && \
+#RUN wget --quiet https://github.com/gitter-lab/SINGE/releases/download/v0.2.0/SCINGE_Example && \
+#    chmod u+x SCINGE_Example
+
+# Install an intermediate version of the compiled SCINGE_Example executable for testing
+RUN wget --quiet https://www.biostat.wisc.edu/~gitter/tmp/c7893f75298b14ffa10e12d4fb9786ed/SCINGE_Example && \
     chmod u+x SCINGE_Example
