--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker pull agitter/singe:latest
+#  - docker pull agitter/singe:latest
+  - docker build -t agitter/singe:tmp -f docker/Dockerfile .
 
 script:
-  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe:latest -c "docker_test.sh"
+  - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe:tmp -c "docker_test.sh"
