--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: required
 services:
   - docker
 
-before_install:
-#  - docker pull agitter/singe:latest
-  - docker build -t agitter/singe:tmp -f docker/Dockerfile .
+before_script:
+  - docker pull agitter/singe:tmp
+  - docker build --pull --cache-from agitter/singe:tmp -t agitter/singe:tmp -f docker/Dockerfile .
 
 script:
   - docker run -v $(pwd):/SCINGE -w /SCINGE --entrypoint "/bin/bash" agitter/singe:tmp -c "./docker_test.sh"
