--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ SCINGE_Example
 SINGE_Example
 SINGE_GLG_Test
 SINGE_Aggregate
+tests/SINGE_Test
 mccExcludedFiles.log
 requiredMCRProducts.txt
 code.md5
