Workaround for apt-get errors See: https://www.reddit.com/r/debian/comments/6hyic4/conflicting_distribution_warning/ https://github.com/romaricp/kit-starter-symfony-4-docker/issues/10 https://stackoverflow.com/questions/47866728/is-it-advisable-to-use-apt-get-clean-twice-in-dockerfile https://hackernoon.com/tips-to-reduce-docker-image-sizes-876095da3b34

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,8 @@
 FROM amarburg/matlab-runtime
 
 RUN apt-get update && \
-    apt-get -y install libxt6 bzip2
+    apt-get -y install libxt6 bzip2 && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Miniconda3 following https://hub.docker.com/r/continuumio/miniconda3/dockerfile
 # Python is only needed for testing SINGE and could be removed from the base
