--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - docker run -v $(pwd):/SINGE -w /SINGE --entrypoint "/bin/bash" agitter/singe:tmp -c "source ~/.bashrc; conda activate singe-test; tests/docker_test.sh"
   # Proof-of-concept of running SINGE in a high-throughput style
   # Can be moved to run in a parallel Travis CI job
-  - tests/high_throughput_test.sh
+  - bash tests/high_throughput_test.sh
 
 after_script:
   # Inspect the built image
