--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     # See available macOS software https://github.com/actions/virtual-environments/blob/master/images/macos/macos-10.15-Readme.md
-    runs-on: macos-10.15
+    runs-on: macos-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
