Cache MATLAB runtime installer

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -9,8 +9,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Cache MATLAB runtime installer
+      id: cache-installer
+      uses: actions/cache@v1
+      with:
+        path: installer
+        key: ${{ runner.os }}-matlab-installer
+    - name: Download MATLAB runtime installer
+      if: steps.cache-installer.outputs.cache-hit != 'true'
+      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2018a/deployment_files/R2018a/installers/maci64/MCR_R2018a_maci64_installer.dmg.zip
     - name: Install MATLAB runtime
       run: |
-        wget https://ssd.mathworks.com/supportfiles/downloads/R2018a/deployment_files/R2018a/installers/maci64/MCR_R2018a_maci64_installer.dmg.zip
-        unzip MCR_R2018a_maci64_installer.dmg.zip
+        unzip -d . installer/MCR_R2018a_maci64_installer.dmg.zip
         ./install -mode silent -agreeToLicense yes
