--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Install MATLAB runtime
       run: |
         unzip -d . installer/MCR_R2018a_maci64_installer.dmg.zip
-        ls
-        ./install -mode silent -agreeToLicense yes
+#        ls
+#        ./install -mode silent -agreeToLicense yes
