--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -1,3 +1,8 @@
+# Installs MATLAB runtime R2016a, the most recent available
+# that is compatible with the installation instructions at
+# https://www.mathworks.com/help/compiler_sdk/dotnet/install-the-matlab-runtime.html
+# Newer version from https://www.mathworks.com/products/compiler/matlab-runtime.html
+# are distributed as .dmg files and require a different installation process
 name: Install SINGE
 
 on: [push, pull_request]
@@ -17,10 +22,8 @@ jobs:
         key: ${{ runner.os }}-matlab-installer
     - name: Download MATLAB runtime installer
       if: steps.cache-installer.outputs.cache-hit != 'true'
-      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2018a/deployment_files/R2018a/installers/maci64/MCR_R2018a_maci64_installer.dmg.zip
+      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2016a/deployment_files/R2016a/installers/maci64/MCR_R2016a_maci64_installer.zip
     - name: Install MATLAB runtime
       run: |
-        #unzip -d . installer/MCR_R2018a_maci64_installer.dmg.zip
-        wget https://ssd.mathworks.com/supportfiles/downloads/R2016a/deployment_files/R2016a/installers/maci64/MCR_R2016a_maci64_installer.zip
-        unzip MCR_R2016a_maci64_installer.zip
+        unzip -d . -q installer/MCR_R2016a_maci64_installer.zip
         sudo ./install -mode silent -agreeToLicense yes
