--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: installer
-        key: ${{ runner.os }}-matlab-installer
+        key: ${{ runner.os }}-matlab-R2016a-installer
     - name: Download MATLAB runtime installer
       if: steps.cache-installer.outputs.cache-hit != 'true'
       run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2016a/deployment_files/R2016a/installers/maci64/MCR_R2016a_maci64_installer.zip
