--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -47,4 +47,4 @@ jobs:
         ls -l
         file SINGE_GLG_Test
         bash SINGE.sh $MATLAB_RUNTIME_PATH standalone data1/X_SCODE_data.mat data1/gene_list.mat Output tests/example_hyperparameters.txt
-        ls Output -l
+        ls -l Output
