--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,15 +21,18 @@ jobs:
       uses: actions/cache@v1
       with:
         path: installer
-        key: ${{ runner.os }}-matlab-R2016a-installer
+        key: ${{ runner.os }}-matlab-R2018a-installer
     - name: Download MATLAB runtime installer
-      if: steps.cache-installer.outputs.cache-hit != 'true'
-      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2016a/deployment_files/R2016a/installers/maci64/MCR_R2016a_maci64_installer.zip
+#      if: steps.cache-installer.outputs.cache-hit != 'true'
+      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2018a/deployment_files/R2018a/installers/maci64/MCR_R2018a_maci64_installer.dmg.zip
     - name: Install MATLAB runtime
       run: |
-        unzip -d . -q installer/MCR_R2016a_maci64_installer.zip
-        sudo ./install -mode silent -agreeToLicense yes
-        MATLAB_RUNTIME_PATH=/Applications/MATLAB/MATLAB_Runtime/v901
+        unzip -d . -q installer/MCR_R2018a_maci64_installer.dmg.zip
+        hdiutil mount MCR_R2018a_maci64_installer.dmg
+        cp -R /Volumes/MCR_R2018a_maci64_installer .
+        hdiutil unmount /Volumes/MCR_R2018a_maci64_installer
+        sudo ./MCR_R2018a_maci64_installer/InstallForMacOSX.app/Contents/MacOS/InstallForMacOSX -mode silent -agreeToLicense yes
+        MATLAB_RUNTIME_PATH=/Applications/MATLAB/MATLAB_Runtime/v94
         echo "::set-env name=MATLAB_RUNTIME_PATH::$MATLAB_RUNTIME_PATH"
         echo "::set-env name=DYLD_LIBRARY_PATH::$MATLAB_RUNTIME_PATH/runtime/maci64:$MATLAB_RUNTIME_PATH/sys/os/maci64:$MATLAB_RUNTIME_PATH/bin/maci64"
         echo "::add-path::$MATLAB_RUNTIME_PATH/bin/maci64"
