--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,22 +21,22 @@ jobs:
       uses: actions/cache@v1
       with:
         path: installer
-        key: ${{ runner.os }}-matlab-R2018a-installer
+        key: ${{ runner.os }}-matlab-R2020a-installer
     - name: Download MATLAB runtime installer
       if: steps.cache-installer.outputs.cache-hit != 'true'
-      run: wget --directory-prefix=installer https://ssd.mathworks.com/supportfiles/downloads/R2018a/deployment_files/R2018a/installers/maci64/MCR_R2018a_maci64_installer.dmg.zip
+      run: wget --directory-prefix=installer http://ssd.mathworks.com/supportfiles/downloads/R2020a/Release/2/deployment_files/installer/complete/maci64/MATLAB_Runtime_R2020a_Update_2_maci64.dmg.zip
     - name: Test SINGE download
       run: |
         wget --recursive --no-parent https://www.biostat.wisc.edu/~gitter/tmp/mac/
         ls -l
     - name: Install MATLAB runtime
       run: |
-        unzip -d . -q installer/MCR_R2018a_maci64_installer.dmg.zip
-        hdiutil mount MCR_R2018a_maci64_installer.dmg
-        cp -R /Volumes/MCR_R2018a_maci64_installer .
-        hdiutil unmount /Volumes/MCR_R2018a_maci64_installer
-        sudo ./MCR_R2018a_maci64_installer/InstallForMacOSX.app/Contents/MacOS/InstallForMacOSX -mode silent -agreeToLicense yes
-        MATLAB_RUNTIME_PATH=/Applications/MATLAB/MATLAB_Runtime/v94
+        unzip -d . -q installer/MATLAB_Runtime_R2020a_Update_2_maci64.dmg.zip
+        hdiutil mount MATLAB_Runtime_R2020a_Update_2_maci64.dmg
+        cp -R /Volumes/MCR_R2020a_maci64_installer .
+        hdiutil unmount /Volumes/MCR_R2020a_maci64_installer
+        sudo ./MCR_R2020a_maci64_installer/InstallForMacOSX.app/Contents/MacOS/InstallForMacOSX -mode silent -agreeToLicense yes
+        MATLAB_RUNTIME_PATH=/Applications/MATLAB/MATLAB_Runtime/v98
         echo "::set-env name=MATLAB_RUNTIME_PATH::$MATLAB_RUNTIME_PATH"
         echo "::set-env name=DYLD_LIBRARY_PATH::$MATLAB_RUNTIME_PATH/runtime/maci64:$MATLAB_RUNTIME_PATH/sys/os/maci64:$MATLAB_RUNTIME_PATH/bin/maci64"
         echo "::add-path::$MATLAB_RUNTIME_PATH/bin/maci64"
