Add GLG Test --outdir argument

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -45,8 +45,8 @@ jobs:
     - name: Run SINGE
       run: |
         echo "Running SINGE GLG Test"
-        ./run_SINGE_GLG_Test_mac.sh $MATLAB_RUNTIME_PATH data1/X_SCODE_data.mat data1/gene_list.mat Output default_hyperparameters.txt 1
-        ./run_SINGE_GLG_Test_mac.sh $MATLAB_RUNTIME_PATH data1/X_SCODE_data.mat data1/gene_list.mat Output default_hyperparameters.txt 2
+        ./run_SINGE_GLG_Test_mac.sh $MATLAB_RUNTIME_PATH data1/X_SCODE_data.mat data1/gene_list.mat --outdir Output default_hyperparameters.txt 1
+        ./run_SINGE_GLG_Test_mac.sh $MATLAB_RUNTIME_PATH data1/X_SCODE_data.mat data1/gene_list.mat --outdir Output default_hyperparameters.txt 2
         echo "Running SINGE Aggregate"
         ./run_SINGE_Aggregate_mac.sh $MATLAB_RUNTIME_PATH data1/X_SCODE_data.mat data1/gene_list.mat Output
         ls -l Output
