--- a/.github/workflows/install-test-macos.yml
+++ b/.github/workflows/install-test-macos.yml
@@ -32,19 +32,12 @@ jobs:
         echo "::set-env name=MATLAB_RUNTIME_PATH::$MATLAB_RUNTIME_PATH"
         echo "::set-env name=DYLD_LIBRARY_PATH::$MATLAB_RUNTIME_PATH/runtime/maci64:$MATLAB_RUNTIME_PATH/sys/os/maci64:$MATLAB_RUNTIME_PATH/bin/maci64"
         echo "::add-path::$MATLAB_RUNTIME_PATH/bin/maci64"
-    - name: Install SINGE
+    - name: Download SINGE
       run: |
-        wget --quiet https://www.biostat.wisc.edu/~gitter/tmp/mac/SINGE_mac.tgz
+        wget --quiet https://github.com/gitter-lab/SINGE/releases/download/$SINGE_VERSION/SINGE_mac.tgz
         tar -xf SINGE_mac.tgz
-        ls -l
-#        SINGE_URL=https://github.com/gitter-lab/SINGE/releases/download/$SINGE_VERSION
-#        wget $SINGE_URL/SINGE_GLG_Test
-#        chmod u+x SINGE_GLG_Test
-#        wget $SINGE_URL/SINGE_Aggregate
-#        chmod u+x SINGE_Aggregate
     - name: Run SINGE
       run: |
-        echo "Running standalone SINGE"
         bash SINGE.sh $MATLAB_RUNTIME_PATH standalone data1/X_SCODE_data.mat data1/gene_list.mat Output tests/example_hyperparameters.txt
         ls -l Output
         cat Output/SINGE_Gene_Influence.txt
