--- a/.github/workflows/install-test-macos.yml
+++ b/.github/workflows/install-test-macos.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Install conda environment
+      uses: goanpeca/setup-miniconda@v1
+      with:
+        activate-environment: singe-test
+        environment-file: tests/environment.yml
+        auto-activate-base: false
+        miniconda-version: 'latest'
     - name: Cache MATLAB runtime installer
       id: cache-installer
       uses: actions/cache@v1
@@ -36,8 +43,8 @@ jobs:
       run: |
         wget --quiet https://github.com/gitter-lab/SINGE/releases/download/$SINGE_VERSION/SINGE_mac.tgz
         tar -xf SINGE_mac.tgz
-    - name: Run SINGE
+    - name: Run and test SINGE
       run: |
         bash SINGE.sh $MATLAB_RUNTIME_PATH standalone data1/X_SCODE_data.mat data1/gene_list.mat Output tests/example_hyperparameters.txt
         ls -l Output
-        cat Output/SINGE_Gene_Influence.txt
+        bash tests/compare_example_output.sh Output
