--- a/.github/workflows/install-test-macos.yml
+++ b/.github/workflows/install-test-macos.yml
@@ -48,4 +48,4 @@ jobs:
       run: |
         bash SINGE.sh $MATLAB_RUNTIME_PATH standalone data1/X_SCODE_data.mat data1/gene_list.mat Output tests/example_hyperparameters.txt
         ls -l Output
-        bash tests/compare_example_output.sh Output
+        bash tests/compare_example_output.sh Output 1e-03 1e-03
